# acidbrain

./: .gitignore  README.md
accent_classifier/: train.py
accent_classifier/app/: Dockerfile  docker-compose.yaml  justfile  main.py  models.py  pyproject.toml  requirements.txt  rest_models.py  test_predict.py
accent_classifier/app/acidbrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
accent_classifier/app/src/: main.py  models.py  rest_models.py
accent_classifier/app/src/acidbrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
accent_classifier/app/tests/: test_predict.py
github/workflows/: lint.yaml
notebook/: EvaluateAccentClassificationModel.ipynb
notebooks/: EvaluateAccentClassificationModel.ipynb
