[project]
name = "acidbrain"
version = "2025.02.04"
description = "accent classification rest API interface built on fastapi"
readme = "README.md"
requires-python = ">=3.10.4"
dependencies = [
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "fastapi==0.115.8",
    "python-multipart==0.0.9",
    "uvicorn==0.27.1",
    "speechbrain==1.0.2",
    "numpy==1.26.4",
    "pydantic==2.5.1",
    "kagglehub==0.3.7",
    "seaborn==0.13.2",
    "librosa==0.10.2.post1",
    "scikit-learn==1.6.1",
    "aiofiles==24.1.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "ffmpeg==1.4",
    "ffmpeg-python==0.2.0",
    "future==1.0.0",
    "httpx>=0.28.1",
    "transformers==4.48.2",
]
[tool.uv]
[tool.ruff]
